--- a/src/data/levels/05a_CPU/01_New CPU/chat/es.yml
+++ b/src/data/levels/05a_CPU/01_New CPU/chat/es.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - 📚  crea un archivo en algún lugar para el código de la CPU 💻
+  - 📚  crea un archivo en algún lugar para el código de la CPU 🧠
   - su valor a exportar debería ser una clase vacía
   - luego, importa ese archivo desde 📄  ~/code/index.js~
   - y agrega una clave `CPU` (apuntando a esa clase) al objeto exportado
