--- a/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
+++ b/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
@@ -5,11 +5,12 @@ main:
     {{Right}}.load("architecture.png");
   messages:
   - so... apparently, this thing has 3 main components that work pretty much independently from each other
-  - "these are: 💻  CPU, 🖥️  PPU, and 🔊  APU"
-  - in order to play games, you must connect two pieces of hardware
-  - 💾  a cartridge (the game itself!) and 🎮  an 8-button gamepad
+  - "these are: 🧠  CPU, 🖥️  PPU, and 🔊  APU"
+  - "in order to play games, you must connect two pieces of hardware:"
+  - 💾  a cartridge (the game itself!)
+  - 🎮  an 8-button gamepad
   responses:
-  - 💻  tell me about the CPU [cpu]
+  - 🧠  tell me about the CPU [cpu]
   - 🖥️  tell me about the PPU [ppu]
   - 🔊  tell me about the APU [apu]
   - ⏭️  what's the best way to start? [start]
