--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
@@ -27,11 +27,11 @@ works:
 bugs:
   messages:
   - first, the 💾  Cartridge seems to start reading <CHR-ROM> from the wrong byte, so all graphics look garbled
-  - the 💻  CPU timing is completely random (causing sync problems) and the `BIT` instruction randomly fails
+  - the 🧠  CPU timing is completely random (causing sync problems) and the `BIT` instruction randomly fails
   - those CPU bugs also mess up the -already out of tune- 🔊  APU channels, so all sound is trash
   - they didn't even map the 🎮  Controller correctly! it's mapped backwards and doesn't allow buttons A and B to be pressed simultaneously
   - finally, the 🖥️  PPU adds screen noise, moves the scroll registers in a weird way, and draws sprites in the wrong position
-  - the 🧠  Mappers work fine, fortunately 😅
+  - the 🗜️  Mappers work fine, fortunately 😅
   responses:
   - ...works
 
@@ -42,7 +42,7 @@ awful:
   - it's designed in a <modular> way
   - so we can reuse its components ♻️
   - that'll allow us to implement things in whatever order we want!
-  - you could start, for example, implementing the graphics (🖥️  PPU) and I'll patch your emulator so it uses the 💻  CPU, 🔊  APU, and 🎮  Controller from <BrokenNEEES>
+  - you could start, for example, implementing the graphics (🖥️  PPU) and I'll patch your emulator so it uses the 🧠  CPU, 🔊  APU, and 🎮  Controller from <BrokenNEEES>
   - then you can continue fixing the other things at your pace
   - let's fix the 💾  Cartridge first
   responses:
