--- a/src/data/levels/03_Cartridge/05_Locating the program/chat/en.yml
+++ b/src/data/levels/03_Cartridge/05_Locating the program/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - we need to access the program code easily 💻
+  - we need to access the program code easily 🧠
   - 📚  create a ```javascript prg()``` method that returns an `Uint8Array` containing the <PRG-ROM> bytes
   - the code is right after the 16-byte header, but remember that you might have to skip 512 bytes if the header says so
   responses:
