--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
@@ -4,7 +4,7 @@ main:
     level.launchEmulator();
     set((m) => m.chat.winOnEnd = true);
   messages:
-  - now I'm gonna integrate your 💻  CPU into the emulator
+  - now I'm gonna integrate your 🧠  CPU into the emulator
   - this is a REALLY complex task
   - so it might take a while
   - tell me and I'll do it, whenever you want
@@ -38,7 +38,7 @@ done:
     book.unlock("useCPU");
   messages:
   - ✔️  done!
-  - now, the 💻  icon in the emulator will glow ✨
+  - now, the 🧠  icon in the emulator will glow ✨
   - try running some games! you'll notice a big improvement
   - the timing should be more consistent, and you won't face any bugs that affect game logic
   responses:
