--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
@@ -4,7 +4,7 @@ main:
     level.launchEmulator();
     set((m) => m.chat.winOnEnd = true);
   messages:
-  - ahora voy a integrar tu 💻  CPU en el emulador
+  - ahora voy a integrar tu 🧠  CPU en el emulador
   - esta es una tarea REALMENTE compleja
   - así que podría tomar un tiempo
   - dime y lo haré, cuando quieras
@@ -38,7 +38,7 @@ done:
     book.unlock("useCPU");
   messages:
   - ✔️  ¡listo!
-  - ahora, el ícono 💻  en el emulador brillará ✨
+  - ahora, el ícono 🧠  en el emulador brillará ✨
   - ¡prueba a ejecutar algunos juegos! notarás una gran mejora
   - el tiempo debería ser más consistente y no enfrentarás ningún error que afecte la lógica del juego
   responses:
