--- a/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
@@ -62,7 +62,7 @@ next:
           this.cpu = cpu;
 
           this.cycle = 0;
-          this.scanline = 261;
+          this.scanline = -1;
           this.frame = 0;
         }
       }
@@ -70,14 +70,14 @@ next:
   - |-
     and add this method (for now, it'll just keep track of the timing):
       ```javascript
-      cycle() {
+      step() {
         this.cycle++;
         if (this.cycle >= 341) {
           this.cycle = 0;
           this.scanline++;
 
-          if (this.scanline >= 262) {
-            this.scanline = 0;
+          if (this.scanline >= 261) {
+            this.scanline = -1;
             this.frame++;
           }
         }
@@ -85,4 +85,12 @@ next:
       ```
   - then, import that file from 📄  ~/code/index.js~
   - and add a `PPU` key (pointing to that class) to the exported object
+  responses:
+  - why does the scanline counter start at -1? 😕 [minus1]
+
+minus1:
+  messages:
+  - the scanline ~-1~ (also called <pre-line>) is a non-visible line, in which the PPU gets things ready for the upcoming frame
+  - during this time, it resets some important status flags
+  - more on that later! 🔜
   responses: []
