--- a/src/data/levels/02_Assembly/01_Example program/chat/es.yml
+++ b/src/data/levels/02_Assembly/01_Example program/chat/es.yml
@@ -13,7 +13,7 @@ main:
   - tiene un ejemplo de un programa básico de NEEES
   responses:
   - (*) el visor no me asusta, lo que sí lo hace son los números raros de abajo [debugger]
-  - ¿qué lenguaje es éste? 😮 [language]
+  - ¿qué lenguaje es este? 😮 [language]
   - ⏭️  ya sé esto [iknow]
 
 iknow:
