The 'take me to the exercise' option also appears when the level is completed

--- a/src/data/levels/05a_CPU/03_Flags/chat/es.yml
+++ b/src/data/levels/05a_CPU/03_Flags/chat/es.yml
@@ -13,7 +13,7 @@ main:
   - todas las banderas se representan con una letra en mayúscula
   responses:
   - no <todas> 😑 [notall]
-  - <m.$exercise> 📚  llévame al ejercicio [what]
+  - <level.isCompleted || m.$exercise> 📚  llévame al ejercicio [what]
 
 notall:
   messages:
