--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - así que, la última es `BRK`, que genera un <Pedido de Interrupción>
   responses:
   - ¿qué es una interrupción? [interrupt]
-  - <m.$exercise> 📚  llévame al ejercicio [implement]
+  - <level.isCompleted || m.$exercise> 📚  llévame al ejercicio [implement]
 
 interrupt:
   messages:
