--- a/src/data/levels/05b_PPU/01_New PPU/chat/es.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/es.yml
@@ -9,7 +9,7 @@ main:
   - 🚲  ciclos, 🌠  scanlines y 🖼️  frames
   responses:
   - ¿a qué te refieres? [wdym]
-  - <m.$exercise> 📚  llévame al ejercicio [next]
+  - <level.isCompleted || m.$exercise> 📚  llévame al ejercicio [next]
 
 wdym:
   messages:
