--- a/src/data/levels/05a_CPU/15_Execute/chat/es.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/es.yml
@@ -7,7 +7,7 @@ main:
   - e incrementaremos los contadores de ciclos
   responses:
   - prometiste que explicarías ciclos 🚲 [cycles]
-  - <level.isCompleted || m.$exercise> 📚  llévame al ejercicio [rightway]
+  - <level.isCompleted || m.$exercise> 📚  llévame a la acción [rightway]
 
 cycles:
   messages:
