--- a/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
+++ b/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
@@ -6,6 +6,8 @@ main:
   messages:
   - so... apparently, this thing has 3 main components that work pretty much independently from each other
   - "these are: 🧠  CPU, 🖥️  PPU, and 🔊  APU"
+  - <{architecture.png}>
+  - "// TODO: REMOVE"
   - "in order to play games, you must connect two pieces of hardware:"
   - 💾  a cartridge (the game itself!)
   - 🎮  an 8-button gamepad
