--- a/src/data/levels/✨_Let's play/05_Battle games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/05_Battle games/chat/en.yml
@@ -5,7 +5,9 @@ main:
   messages:
   - hey,
   - let's play a game
-  - it's called 🦸 🤸  ~Super Tilt Bro~
+  - |-
+    it's called 🦸 🤸  ~Super Tilt Bro~
+    <{screenshot.png;30x30}>
   - if you win my challenge, I'll send you all my 💥  <battle> games
   - in the ~*.neees~ format
   responses:
