--- a/src/data/levels/✨_Let's play/06_Arcade games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/06_Arcade games/chat/en.yml
@@ -5,7 +5,9 @@ main:
   messages:
   - hey,
   - let's play a game
-  - it's called 🤖 🧗  ~Robo-Ninja Climb~
+  - |-
+    it's called 🤖 🧗  ~Robo-Ninja Climb~
+    <{screenshot.png;30x30}>
   - if you complete it, I'll send you all my 🕹️  <arcade> games
   - in the ~*.neees~ format
   responses:
