Adding image to intro

--- a/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
+++ b/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
@@ -44,6 +44,10 @@ workingnes:
   - it works just fine, though now it's disassembled and hooked up to a bunch of logic analyzers
   - it belonged to an ancestor of mine
   - he must be turning in his grave after what I did to his poor NEEES 😅
+  - |-
+    look
+    
+    <{neees.jpg;30x30}>
   responses:
   - ...forwhat
 
