--- a/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
+++ b/src/data/levels/✨_Let's play/01_Non-platform games/chat/en.yml
@@ -36,7 +36,7 @@ zoom:
   run: |
     {{Right}}.stream.zoom();
   messages:
-  - ✨  I've also hacked the controller port so your inputs work on my real NEEES
+  - ✨  I hacked the controller port so your inputs work on my real NEEES
   responses:
   - so, can we play now? 👾 [play]
 
