--- a/src/data/levels/02_Assembly/01_Example program/chat/es.yml
+++ b/src/data/levels/02_Assembly/01_Example program/chat/es.yml
@@ -57,6 +57,8 @@ language:
   - entonces, después de compilar, ¿se va a convertir en un conjunto raro de bytes? [machinecode]
 
 machinecode:
+  run: |
+    {{Bottom}}.setSelectedCells([0x4020, 0x4021, 0x4022, 0x4023, 0x4024, 0x4025, 0x4026, 0x4027, 0x4028, 0x4029, 0x402A, 0x402B, 0x402C, 0x402D, 0x402E]);
   messages:
   - correcto
   - de hecho, estás viendo el código compilado ahora mismo
@@ -88,6 +90,7 @@ butyousaid:
 
 otherthings:
   run-after-messages: |
+    {{Bottom}}.setSelectedCells([]);
     set((m) => m.$canRun = true);
   messages:
   - vamos a ejecutar el código y descubrirlo
