--- a/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
+++ b/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
@@ -27,8 +27,7 @@ name:
   messages:
   - I think it stands for <'No Entiendo' Enigmatic Enjoyment Solution>, but I'm not sure
   responses:
-  - oh, I see - how do you know about this stuff? [namehow]
-  - ...forwhat
+  - how do you know about this stuff? [namehow]
 
 namehow:
   messages:
@@ -36,7 +35,6 @@ namehow:
   - and I'm trying to reverse-engineer it
   responses:
   - DO YOU HAVE A WORKING NEEES? [workingnes]
-  - ...forwhat
 
 workingnes:
   messages:
